--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "chrome-browser-object-polyfill": "0.2.0",
     "dispensary": "0.10.3",
     "level-fs-browser": "1.0.0",
+    "framework7": "1.6.0",
+    "framework7-react": "0.8.5-beta.8",
     "natural": "0.4.0",
     "react": "15.4.1",
     "react-dom": "15.4.1",
